# sigk_lab_1

./: .gitignore  dockerfile  pyproject.toml  readme.md
notebooks/: dwt.ipynb
scripts/: download_div2k.py  test_debluring_model.py  test_inpaitning_model.py  train_debluring.py  train_inpainting.py
sigk/datasets/: compressed_image_dataset.py  deblur_image_dataset.py  inpating_image_dataset.py
sigk/layers/: gdn.py  lower_bound.py  multihead_attention.py  partial_conv_2d.py  partial_convolution_2d.py  partial_gdn.py  partial_gelu.py  partial_leaky_relu.py  partial_multihead_attention.py  partial_squeeze_and_excitation_block.py  spectral.py  squeeze_and_excitaition_block.py
sigk/layers/attentions/: channel_attention.py  spatial_attention.py
sigk/layers/dwt/: __init__.py  adaptive_dwt2d.py  adaptive_idwt2d.py  dwt2d.py  dwt_base.py  idwt2d.py  partial_adaptive_dwt2d.py  partial_adaptive_idwt2d.py  partial_dwt2d.py  partial_dwt_base.py  partial_idwt2d.py  wavelet.py  wavelet_bank.py
sigk/layers/spectral/: partial_spectral_conv_2d.py  partial_spectral_fused_mb_conv.py  spectral.py  spectral_conv2d.py  spectral_depthwise_conv2d.py  spectral_fused_mb_conv.py
sigk/loss/: inpainting_loss.py
sigk/models/: debluring.py  debluring_model.py  inpainting.py  inpainting_model.py  inpaitning_model_shuffle.py
sigk/utils/: tensor_utils.py  training_utils.py  unpacking_sequence.py
tests/: test_dwt.py
