[project]
name="sigk"
version="0.0.0"
requires-python = ">= 3.11"
authors = [
  {name = "Grzegorz Czarnecki", email = "01158613@pw.edu.pl"},
]
dependencies=[
    "pytest",
    "black",
    "torch",
    "torchvision",
    "ruff",
    "wget",
    "numpy",
    "click",
]

[tool.setuptools]
packages = ["sigk"]
