[project]
name="sigk"
version="0.0.0"
requires-python = ">= 3.11"
authors = [
  {name = "Grzegorz Czarnecki", email = "01158613@pw.edu.pl"},
]
dependencies=[
    "pytest",
    "black",
    "torch",
    "torchvision",
    "torchmetrics",
    "ruff",
    "wget",
    "numpy",
    "click",
    "lightning",
    "tensorboard",
    "pywavelets",
    "scikit-image",
    "rich",
    "opencv-python"
]

[tool.setuptools]
package-dir = {"sigk" = "sigk"}
